Fixing airport typo.

--- a/www/smg/smgtrip/old/la-california.html
+++ b/www/smg/smgtrip/old/la-california.html
@@ -170,7 +170,7 @@ You can contact our office assistant Chris for&nbsp; help with flights at her E-
                 This trip is open to SMG students and their high school age host brothers and sisters.<br>
                 <br>
                 <strong>Arrival &amp; departure airport:<br>
-                </strong>Fly in and out of Los Angeles (LAX) aiport.<br>
+                </strong>Fly in and out of Los Angeles (LAX) airport.<br>
   <br>
   <strong>Rules:</strong> Students have to follow all SMG rules and US and state laws. Students have a nightly curfew, restriction on free time activities, etc. Students agree that&nbsp; SMG staff or volunteers may end a student&rsquo;s participation at any time, and send a student home early at the student&rsquo;s own expense.</p>
               <p align="justify"><strong>Payment:</strong> <br>
