new ise site, ie7 and lower message on site

--- a/www/smg/smgstore/principal.htm
+++ b/www/smg/smgstore/principal.htm
@@ -30,16 +30,21 @@
                     <div align="left" class="style3"><strong>Select one category: </strong></div>
                   </div>                  <div align="center"></div></td>
                 </tr>
+                
               <tr bordercolor="#FFFFFF" bgcolor="#FFFFFF">
+              <!----
+              <td colspan=3 align="center">The store is currently down as  we make some changes to the payment process.</td>
+              ---->
                 <td height="153"><div align="center"><a href="clothing.htm"><img src="images/store1.jpg" width="160" height="143" border="0"></a></div></td>
                 <td><div align="center"><a href="accessories.htm"><img src="images/store2.jpg" width="160" height="143" border="0"></a></div></td>
                 <td><div align="center"><a href="fee.htm"><img src="images/store3.jpg" width="160" height="143" border="0"></a></div></td>
+                
               </tr>
             </table>
             <br>
             <table width="600" border="0" align="center" cellpadding="3" cellspacing="0">
               <tr>
-                <td bgcolor="#E2E2E2"><div align="center"><span class="style1 style4"><font size="2" face="Arial, Helvetica, sans-serif"><strong>FEEDBACK</strong></font> - <a href="mailto:jordan@student-management.com" class="style4"><font size="1">Click for comments or suggestions.</font></a></span></div></td>
+                <td bgcolor="#E2E2E2"><div align="center"><span class="style1 style4"><font size="2" face="Arial, Helvetica, sans-serif"><strong>FEEDBACK</strong></font> - <a href="mailto:josh@student-management.com" class="style4"><font size="1">Click for comments or suggestions.</font></a></span></div></td>
               </tr>
             </table></td>
           </tr>
