case updates for login information. iseusa application.cfm removed brian haus from the email list updates to flight info so that it works with PHP

--- a/www/case/FAQ.html
+++ b/www/case/FAQ.html
@@ -6,43 +6,70 @@
 <title>Cultural Academic Student Exchange</title>
 <!-- InstanceEndEditable -->
 <link href="css/maincss.css" rel="stylesheet" type="text/css" />
+<!----
 <style type="text/css">
 <!--
 a:link {
-	color: ##000;
+	color: #000;
 	text-decoration: none;
 }
 a:visited {
 	text-decoration: none;
-	color: ##000;
+	color: #000;
 }
 a:hover {
 	text-decoration: none;
-	color: ##666;
+	color: #333;
 }
 a:active {
 	text-decoration: none;
-	color: ##000;
+	color: #333;
 }
 -->
 </style>
+---->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
+<style type="text/css">
+<!--
+a:link {
+	color: #000;
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+	color: #000;
+}
+a:hover {
+	text-decoration: none;
+	color: #98002E;
+}
+a:active {
+	text-decoration: none;
+	color: #000;
+}
+-->
+</style>
+
+<link rel="shortcut icon" href="favicon.ico" />
+
 </head>
 
 <body>
 <div id="wrapper">
   <div id="header">
     <div id="topBullets">
-      <p><a href= "http://www.case-usa.org/internal/int_agent2.cfm" class="toprightlinks1"></a><a href= "https://www.google.com/a/case-usa.org/ServiceLogin?service=mail&passive=true&rm=false&continue=http%3A%2F%2Fmail.google.com%2Fa%2Fcase-usa.org%2F&bsv=zpwhtygjntrz&ltmpl=default&ltmplcache=2" class="toprightlinks2"></a><a href= "headquarterNews.html" class="toprightlinks3"></a><a href= "../CASE/contact.html"class="toprightlinks4"></a><a href= "../CASE/FAQ.html"class="toprightlinks5"></a></p>
-    </div>
-  </div>
-  <div id="main-nav"><a href="index.html" class="home1"></a><a href="aboutCase.html" class= "about2"></a> <a href="hostFamilies.html" class="hostfam3"></a><a href="students.html" class="students4"></a><a href="representatives.html" class="rep5"></a><a href="contact.html" class="contact6"></a> </div>
+      <p><a href= "https://www.google.com/a/case-usa.org/ServiceLogin?service=mail&passive=true&rm=false&continue=http%3A%2F%2Fmail.google.com%2Fa%2Fcase-usa.org%2F&bsv=zpwhtygjntrz&ltmpl=default&ltmplcache=2" class="toprightlinks2"></a><a href= "headquarterNews.cfm" class="toprightlinks3"></a><a href= "../contact.cfm"class="toprightlinks4"></a><a href= "../FAQ.cfm"class="toprightlinks5"></a><a href= "http://www.case-usa.org/Store/store.cfm"class="toprightlinks6"></a></p>
+    </div><!-- end topBullets -->
+  </div><!-- end header -->
+  <div id="main-nav"><a href="index.cfm" class="home1"></a><a href="aboutCase.cfm" class= "about2"></a> <a href="hostFamilies.cfm" class="hostfam3"></a><a href="students.cfm" class="students4"></a><a href="representatives.cfm" class="rep5"></a><a href="contact.cfm" class="contact6"></a> </div>
   <div id= "spacer"> </div>
   <div id= "mainbody">
     <div id="sidebar">
       <div id="AccountLogin">
-        <div id="loginInfo"><span class="Login">USER ID</span> <form method="post" action="internal/loginprocess.cfm">
+        <div id="loginInfo">
+        <cfif isDefined('url.jakegyllenhaal')>
+        <span class="Login">USER ID</span> <form method="post" action=" http://www.case-usa.org/internal/loginprocess.cfm">
           <input type="text" name="username" label="user id" message="A username is required to login." required="yes" />
         <br />
         <form id="form1" name="form1" method="post" action="">
@@ -52,20 +79,28 @@ a:active {
           <input name="Submit" type="submit" value="Login" />
           <br />
         </form>
-      </div></div>
+        <cfelse>
+        <div class="LoginBut"><a href="http://case.exitsapplication.com/"><img src="images/login.png"  border=0 /></a><br /><Br />
+        
+        </div>
+        </cfif>
+        <!-- end LoginBut -->
+        </div><!-- end LoginInfo -->
+      </div><!-- end AccountLogin -->
       <div id="sidebarEnd"></div>
       <div id="sidebarSpacer"></div>
       <div id="hostfamilyinfo"></div>
-      <li class="List"><a href="viewStudents.cfm">View Students</a></li>
-      <li class="List"><a href="contactARep.cfm">Be Contacted by Area Rep</a></li>
+          <ul><li class="List"><a href="viewStudents.cfm">View Students</a></li>
+      <li class="List"><a href="contactARep.cfm">Become a Host Family</a></li></ul>
       <div id="studentinfo"></div>
-      <li class="List"><a href="studentTours.html">Student Tours</a></li>
-      <li class="List"><a href="becomeStudent.html">Become a Student</a></li>
-      <li class="List"><a href="http://www.esecutive.com/index.php">Student Insurance</a></li>
-      <div id="repInfo"></div>
-      <li class="List"><a href="contactARep.cfm">Be Contacted by Rep</a></li>
+          <ul><li class="List"><a href="studentTours.cfm">Student Tours</a></li>
+      <li class="List"><a href="contactAStudent.cfm">Become a Student</a></li>
+      <li class="List"><a href="http://www.esecutive.com/index.php">Student Insurance</a></li></ul>
+       <div id="repInfo"></div>
+           <ul>
+           <li class="List"><a href="beARep.cfm">Become a Rep</a></li></ul>
       <div id="sidebarEnd"></div>
-    </div>
+</div><!-- end sidebar -->
     <!-- InstanceBeginEditable name="MainContent" -->
 <div id="mainContent">
 <div id="ContentTop"></div>
@@ -91,9 +126,10 @@ a:active {
 <div id="Contentbottom"></div>
 </div>
 <!-- InstanceEndEditable -->
-    <div id="footer"><span class="footertext">19 Charmer Court, Middletown, NJ 07748   I   (732) 671-6448    I    (800) 458-8336<br />
-  <span class="copyright">© 2009 Copyright Cultural Academic Student Exchange. ALL RIGHTS RESERVED</span></span></div>
-  </div>
-</div>
+    </div><!-- end mainbody -->
+    <!-- This clearing element should immediately follow the #mainContent div in order to force the #container div to contain all child floats --><br class="clearfloat" />
+<div id="footer"><span class="footertext">264 Midland Avenue Unit 5&nbsp;&nbsp; I  &nbsp;&nbsp;Saddle Brook, NJ 07663 &nbsp;&nbsp; I  &nbsp;&nbsp; (201) 773-8299  &nbsp;&nbsp;  I  &nbsp;&nbsp;  (800) 458-8336<br />
+  <span class="copyright">U.S. Department of State &ndash; Toll free: (866) 283-9090 &ndash; jvisas@state.gov</span></span></div><!-- end footer -->
+  </div><!-- end #wrapper -->
 </body>
 <!-- InstanceEnd --></html>
