--- a/www/iseusa/badbrowser/page2.html
+++ b/www/iseusa/badbrowser/page2.html
@@ -6,8 +6,8 @@
 	
 	<title>Build an Unsupported Browser Warning with jQuery</title>
 	<link rel="stylesheet" href="style.css" />
-	<script type="text/javascript" src="jquery-1.2.6.min.js"></script> 
-	<script type="text/javascript" src="jquery.badBrowser.js"></script> 
+	<script type="text/javascript" src="../linked/js/jquery-1.2.6.min.js"></script> 
+	<script type="text/javascript" src="../linked/js/jquery.badBrowser.js"></script> 
 </head>
 
 <body>
