CASE - Trips - Removing student trip files - Linking trips section to trips.exitsapplication.com

--- a/www/case/HostFamily.html
+++ b/www/case/HostFamily.html
@@ -149,7 +149,7 @@ body {
 <area shape="poly" coords="21,15,178,15,178,40,21,40,21,15" href="RepInfo.html" target="_parent" alt="" />
 </map>
 <map name="m_homepage_r4_c3_r5_c5" id="m_homepage_r4_c3_r5_c5">
-<area shape="poly" coords="18,71,139,71,139,96,18,96,18,71" href="StudentTours.html" target="_parent" alt="" />
+<area shape="poly" coords="18,71,139,71,139,96,18,96,18,71" href="exchange-student-trips.cfm" target="_parent" alt="" />
 <area shape="poly" coords="18,103,139,103,139,128,18,128,18,103" href="StudentInsurance.html" target="_parent" alt="" />
 </map>
 </body>
