--- a/www/case/viewStudents.html
+++ b/www/case/viewStudents.html
@@ -62,7 +62,7 @@ a:active {
       <li class="List"><a href="viewStudents.html">View Students</a></li>
       <li class="List"><a href="contactARep.cfm">Be Contacted by Area Rep</a></li>
       <div id="studentinfo"></div>
-      <li class="List"><a href="studentTours.html">Student Tours</a></li>
+      <li class="List"><a href="exchange-student-trips.cfm">Student Tours</a></li>
       <li class="List"><a href="becomeStudent.html">Become a Student</a></li>
       <li class="List"><a href="http://www.esecutive.com/index.php">Student Insurance</a></li>
       <div id="repInfo"></div>
