--- a/www/case/homepage_r4_c3.htm
+++ b/www/case/homepage_r4_c3.htm
@@ -152,7 +152,7 @@ function MM_preloadImages() { //v3.0
 <area shape="poly" coords="21,15,178,15,178,40,21,40,21,15" href="RepInfo.html" target="_parent" alt="" />
 </map>
 <map name="m_homepage_r4_c3_r5_c5" id="m_homepage_r4_c3_r5_c5">
-<area shape="poly" coords="17,70,138,70,138,95,17,95,17,70" href="Student Tours" target="_parent" alt="" />
+<area shape="poly" coords="17,70,138,70,138,95,17,95,17,70" href="Student Trips" target="_parent" alt="" />
 <area shape="poly" coords="18,103,139,103,139,128,18,128,18,103" href="StudentInsurance.html" target="_parent" alt="" />
 </map>
 </body>
